--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,41 @@
-<h1>Burgers, Baby!</h1>
-<ul>
-{{#each burger}}
-<li>
-  {{id}}:{{name}}
-</li>
-{{/each}}
-</ul>
+<div>
+    <h1>Burgers</h1>
 
-<form action="/burgers" method="post">
-<input type="text" name="burger-name" />
-<button type="submit">Order a Good burger!</button>
-</form>
+    <h2>Eat deez burgers</h2>
+
+    <ul>
+        {{#each burgers}}
+        {{#unless devoured}}
+        {{> burgers/burger-block devoured=false}}
+        {{/unless}}
+        {{/each}}
+    </ul>
+
+    <h2>Burgers that are devoured</h2>
+
+    <ul>
+        {{#each burgers}}
+        {{#if devoured}}
+        {{> burgers/burger-block devoured=true}}
+        {{/if}}
+        {{/each}}
+    </ul>
+
+    <h2>Add a Burger</h2>
+    <form class="create-form">
+
+        <div class="form-group">
+            <label for="ca">Burger Name:</label>
+            <input type="text" id="ca" name="name">
+        </div>
+
+        <div class="form-group">
+            <label for="devoured">Devoured.</label><br>
+            <input type="radio" name="devoured" value="1" placeholder="Devour!"><br>
+            <label for="devoured">Bout to be devoured</label> <br>
+            <input type="radio" name="devoured" value="0" placeholder="Eat this">
+        </div>
+
+        <button type="submit">Add Burger</button>
+    </form>
+</div>
